--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,9 @@ dependencies {
     implementation 'com.google.android.gms:play-services-places:16.0.0'
     implementation 'com.google.android.gms:play-services-maps:16.0.0'
     implementation 'org.apache.commons:commons-text:1.6'
+    implementation 'me.zhanghai.android.materialprogressbar:library:1.4.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation 'androidx.cardview:cardview:1.0.0'
 }
