--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
                 android:value="@string/google_maps_key"/>
 
         <activity
-                android:name=".maps.MapsActivity">
+                android:name=".maps.NearbyActivity">
         </activity>
 
     </application>
